# CAPTCHASecurityInsights

./: .gitignore  LICENSE.txt  README.md
Bot_Tests/: .gitignore
captcha_testing_framework/: .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml
captcha_testing_framework/src/: main.rs  models.rs  routes.rs  views.rs
captcha_testing_framework/src/app/: mod.rs
captcha_testing_framework/src/app/captchas/: mod.rs
captcha_testing_framework/src/app/captchas/captchafox/: forms.rs  urls.rs  views.rs
captcha_testing_framework/src/app/captchas/friendly_captcha/: forms.rs  urls.rs  views.rs
captcha_testing_framework/src/app/captchas/recaptcha_enterprise/: forms.rs  urls.rs  views.rs
captcha_testing_framework/src/app/captchas/recaptcha_v2/: forms.rs  mod.rs  urls.rs  views.rs
captcha_testing_framework/src/app/captchas/recaptcha_v3/: forms.rs  urls.rs  views.rs
captcha_testing_framework/src/app/landing_page/: mod.rs  urls.rs  views.rs
captcha_testing_framework/static/css/: style.css
captcha_testing_framework/static/js/: observer.js
captcha_testing_framework/static/js/turnstile/: api.js  api_formatted.js  api_synchrony_after_clean.js  normal_debugged.html  turnstile_logic.js
captcha_testing_framework/static/templates/: index.html
captcha_testing_framework/static/templates/base/: base.html
captcha_testing_framework/static/templates/captchas/: captcha_fox.html  friendly_captcha.html  playground.html  recaptcha_enterprise.html  recaptcha_v2.html  recaptcha_v3.html  turnstile.html  turnstile_testing.html  websocket_test.html
(+147 files in other folders)
