[package]
name = "captcha_testing_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
anstream = "0.6.13"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.11.24", features = ["json"] }
rustls = "0.23.4"
rustls-pemfile = "2.1.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_urlencoded = "0.7.1"
tera = "1.19.1"
uuid = { version = "1.7.0", features = ["v4"] }
